notebookの説明を追加

--- a/note.ipynb
+++ b/note.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -50,13 +50,13 @@
     "    \"\"\"\n",
     "    transform_for_trainの逆操作。\n",
     "    \"\"\"\n",
-    "    data = img[:, :, ::-1] + 120  # これ、np.uinit8にしてよくね？\n",
+    "    data = img[:, :, ::-1] + 120\n",
     "    return data.clip(0, 255)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -177,16 +177,58 @@
    "source": [
     "def style_matrix(y):\n",
     "  \"\"\"画風を表現する行列\"\"\"\n",
-    "  _, height, width, ch_num = y.get_shape().as_list()\n",
-    "  y_reshaped = tf.reshape(y, [-1, height * width, ch_num])\n",
+    "  _, h, w, c = y.get_shape().as_list()\n",
+    "  y_reshaped = tf.reshape(y, [-1, h * w, c])\n",
     "  if tf.__version__[0] == '1':\n",
-    "    return tf.matmul(y_reshaped, y_reshaped, adjoint_a=True) / (height * width * ch_num)\n",
+    "    return tf.matmul(y_reshaped, y_reshaped, adjoint_a=True) / (h * w * c)\n",
     "  elif tf.__version__[0] == '0':\n",
-    "    return tf.batch_matmul(y_reshaped, y_reshaped, adj_x=True) / (height * width * ch_num)\n",
+    "    return tf.batch_matmul(y_reshaped, y_reshaped, adj_x=True) / (h * w * c)\n",
     "  else:\n",
-    "    raise\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "y: shape [batch_size, h, w, c]のテンソル\n",
+    "（実はbatch_size = 1）\n",
     "\n",
+    "style_matrix(y): shape [batch_size, c, c]のテンソル\n",
+    "（実質、$c\\times c$の正方行列）\n",
     "\n",
+    "$y_{ijk}$ = y[0, i, j, k]とおと、\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{style}(y)_{0ij} = \\frac{1}{hwc}\\sum_{p,q} y_{pqi}y_{pqj}\n",
+    "$$\n",
+    "を意味する。\n",
+    "$hwc$で割っているのはこの値が大きくなりすぎないようにしている。\n",
+    "\n",
+    "この式は共分散行列の式と比較すると理解しやすいと思います。\n",
+    "\n",
+    "$m\\times n$行列$\\{X_{ij}\\}$を\n",
+    "$(X_{11}, X_{12}, \\dots, X_{1n})$, …, $(X_{m1}, X_{m2}, \\dots, X_{mn})$というように、\n",
+    "$m$個の$n$次元ベクトルと解釈します。その共分散行列は、\n",
+    "$$\n",
+    "\\frac{1}{m}\\sum_k X_{ki}X_{kj} - \\frac{1}{m^2}\\sum_k X_{ki}\\sum_k X_{kj}.\n",
+    "$$\n",
+    "この式の一つ目の項がstyle_matrixの式で使っているものに相当します。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "class Generator:\n",
     "    def __init__(self, base_model, img_orig, img_style, config):\n",
     "        # 特徴抽出を行う\n",
@@ -224,7 +266,7 @@
     "\n",
     "        self.total_loss = total_loss\n",
     "        self.total_train = config.optimizer.minimize(self.total_loss)\n",
-    "        clipped = tf.clip_by_value(self.img_gen, -120., 136.)\n",
+    "        clipped = tf.clip_by_value(self.img_gen, -120., 135.)  # 0〜255の範囲に収まるようにする操作\n",
     "        self.clip = tf.assign(self.img_gen, clipped)\n",
     "        \n",
     "    def generate(self, config):\n",
@@ -258,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -275,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -284,17 +326,14 @@
    "outputs": [],
    "source": [
     "# 設定\n",
-    "# modelを読み込む\n",
-    "\n",
-    "\n",
     "class Config:\n",
     "    batch_size = 1\n",
     "    iteration = 5000\n",
-    "    lr = 4.0\n",
-    "    lam = 0.005\n",
-    "    width = 300\n",
-    "    height = 300\n",
-    "    output_shape = [batch_size, height, width, 3]\n",
+    "    lr = 1.0  # 学習レート\n",
+    "    lam = 0.05  # 元画像と画風画像のバランスです。大きくすると元画像寄りになります。\n",
+    "    width = 300  # 生成画像の横幅です。小さくすると雑になる代わりに速くなります。\n",
+    "    height = 300  # 生成画像の縦幅です。小さくすると雑になる代わりに速くなります。\n",
+    "    output_shape = [1, height, width, 3]\n",
     "    output_dir = \"_output\"\n",
     "    model = \"nin\"\n",
     "    # model = \"vgg\"\n",
@@ -307,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -343,7 +382,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
